--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
+    "sweetalert2": "^11.3.10",
     "text-to-speech-js": "^1.1.10",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-sweetalert2": "^5.0.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
